# micro_http

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rustfmt.toml  vite.config.ts
public/css/: themes.css
src/: lib.rs  main.rs  web_server.rs
src/cli/: config.rs  database.rs  mod.rs
src/config/: logging.rs  mod.rs  web.rs
src/core/: mod.rs  static.rs
src/core/error/: errors.rs  mod.rs
src/core/routing/: handle.rs  log.rs  mod.rs  response.rs
src/database/migrations/: mod.rs
src/providers/: database.rs  mod.rs  templates.rs
src/providers/database/: mod.rs
src/services/: counter.rs  homepage.rs  mod.rs  static.rs
static/: themes.css
views/: homepage.html  main.js
views/templates/: base.html
