[package]
name = "micro_http"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
tera = { version = "1.20.0", default-features = false }
tiny_http = "0.12.0"
matchit = "0.8.4"

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

# Database
sea-orm-migration = { version = "1.1.1", features = [
  "sqlx-sqlite",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "with-chrono",
] }
sea-orm = { version = "1.1.1", features = [
  "sqlx-sqlite",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
] }

# Configuration & CLI
clap = { version = "4.5.20", default-features = false, features = [
  "std",
  "derive",
  "env",
  "usage",
] }
toml = "0.8.19"

# Logging
log = { version = "0.4.22", features = [
  "max_level_debug",
  "release_max_level_info",
] }
flexi_logger = { version = "0.29.6" }

# Utilities
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "now",
  "std",
] }
lazy_static = "1.5.0"
